# recipes-to-notes

./: .env.template  .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: dev.ipynb  notion.ipynb  run.ipynb
src/recipes_to_notes/: __init__.py  base_classes.py  i18n.py  runner.py  schema.py  schema_extraction.py
src/recipes_to_notes/plugins/notes/: notion.py
src/recipes_to_notes/plugins/schema_extraction/: azure_openai.py  openai.py
src/recipes_to_notes/plugins/scraping/: spider.py
