[project]
name = "recipes-to-notes"
version = "1.0.0"
description = "https://www.kwestiasmaku.com/desery/ciasta/czekoladowe_brownie/przepis.html"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "notion-client>=2.4.0",
    "python-dotenv>=1.1.1",
    "spider-client>=0.1.72",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ruff>=0.12.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recipes_to_notes"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.pydocstyle]
convention = "google"